--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="dialog_padding_10">10dp</dimen>
     <dimen name="dialog_corner_radius_10">10dp</dimen>
     <dimen name="dialog_title_text_size_30">30sp</dimen>
+    <dimen name="app_name_text_size_40">40sp</dimen>
     <dimen name="dialog_desc_margin_vertical">16sp</dimen>
     <dimen name="dialog_desc_text_size_22">22sp</dimen>
     <dimen name="button_corner_radius_6">6dp</dimen>
@@ -27,4 +28,6 @@
     <dimen name="theme_button_padding_10">10dp</dimen>
     <dimen name="theme_button_text_size_16">16sp</dimen>
     <dimen name="theme_button_radius_6">6dp</dimen>
+    <dimen name="high_score_14sp">15sp</dimen>
+    <dimen name="theme_item_name_24sp">24sp</dimen>
 </resources>
