--- a/app/src/main/res/drawable/bubble_tile_color.xml
+++ b/app/src/main/res/drawable/bubble_tile_color.xml
@@ -3,17 +3,20 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/background">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/def_bg_color_0" />
+        <shape android:shape="oval">
+            <solid android:color="@color/bubble_bg_color_0" />
             <corners android:radius="10dp" />
         </shape>
     </item>
 
     <item
-        android:bottom="5dp">
-        <shape android:shape="rectangle">
+        android:bottom="3dp"
+        android:left="3dp"
+        android:right="3dp"
+        android:top="3dp">
+        <shape android:shape="oval">
             <solid android:color="#34FFFFFF" />
-            <corners android:radius="10dp" />
+            <corners android:radius="7dp" />
         </shape>
     </item>
 
