--- a/app/src/main/res/layout/fragment_big_game.xml
+++ b/app/src/main/res/layout/fragment_big_game.xml
@@ -148,7 +148,7 @@
             android:layout_width="55dp"
             android:layout_height="match_parent"
             android:layout_gravity="end"
-            android:layout_marginEnd="@dimen/dialog_margin_10"
+            android:layout_marginEnd="@dimen/dialog_button_margin_20"
             android:background="@drawable/def_score_bg"
             android:contentDescription="@null"
             android:padding="@dimen/game_board_padding_5"
